--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       run: |
         sudo apt install sshpass
         echo "installed sshpass"
-        sshpass -p 1234 ssh oz@172.16.219.130
+        sshpass -- --
         cd
         
         git clone https://github.com/surrenderoz/cicdtest.git
